@@ -1,0 +1,1 @@
+	ldr	a1, Lval
